NewArchive/18f8465b596e10afb5f70e7f573ad436-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp:8:33: error: ISO C++ forbids declaration of ‘Meow’ with no type [-fpermissive]
     Meow ( TIterator arf, int c ) {
                                 ^
main.cpp: In member function ‘int LezGo::Meow(TIterator, int)’:
main.cpp:10:5: warning: no return statement in function returning non-void [-Wreturn-type]
     }
     ^
main.cpp: At global scope:
main.cpp:17:5: error: ‘Meow’ does not name a type
     Meow<TIterator, 1> ( TIterator arf, int c ) {
     ^
